Fix for modal box button on mobile 2

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -369,8 +369,10 @@ h1 {
   .content p {
     font-size: 0.8rem; }
 
-  .play-again, .next-level, .return-home {
-    padding: 0.5rem;
+  .play-again,
+  .next-level,
+  .return-home {
+    padding: 0.6rem;
     font-size: 0.8rem; }
 
   .fas {
